<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_transparency">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/homecourse_logo_resize100"
            android:layout_margin="@dimen/margin_small"

            >
        </ImageView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="@string/login_header"
            android:textColor="@color/salmon"
            android:layout_margin="@dimen/margin_small"
            android:textSize="24sp">
        </TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:text="@string/login_now"
            android:layout_margin="@dimen/margin_small"
            android:textColor="@color/battleship_gray"
            android:textSize="24sp"
            android:textStyle="bold">
        </TextView>

    </LinearLayout>

    <ImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@drawable/homecourse_logo_resize100"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="0dp"
        android:layout_gravity="center"

        >
    </ImageView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_marginTop="0dp"
        android:layout_marginStart="@dimen/margin_large"
        android:layout_marginEnd="@dimen/margin_large"
        android:layout_marginBottom="@dimen/margin_small"
        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_large"
            android:orientation="horizontal"
            >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:srcCompat="@drawable/ic_myname"
                >
            </ImageView>

            <AutoCompleteTextView
                android:id="@+id/accountView"
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:hint="@string/account_default"
                android:textColor="@color/battleship_gray" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="@dimen/margin_small"
            android:layout_marginStart="@dimen/margin_large"
            android:layout_marginEnd="@dimen/margin_large"
            android:orientation="horizontal"
            >

        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:srcCompat="@drawable/ic_mypassword">

            </ImageView>

            <EditText
                android:id="@+id/passwordView"
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/password_default"
                android:inputType="textPassword" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_large"
        android:layout_marginEnd="@dimen/margin_large"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_marginBottom="@dimen/margin_small">

        <CheckBox
            android:id="@+id/checkbox"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_large">
        </CheckBox>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remember_password"
            android:textColor="@color/black">
        </TextView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="150dp"
            android:text="@string/password_forgot"

            android:textColor="@color/design_default_color_primary">

        </TextView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_large"
        android:layout_marginEnd="@dimen/margin_large"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="@dimen/margin_large">

        <Button
            android:layout_weight="1"
            android:id="@+id/login_now"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button_background"
            android:text="@string/login_now"
            android:layout_marginStart="@dimen/margin_large"
            android:textColor="@color/white">

        </Button>

        <Button
            android:layout_weight="1"
            android:id="@+id/skip"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_large"
            android:background="@drawable/button_background"
            android:text="@string/skip"
            android:textColor="@color/white">

        </Button>
    </LinearLayout>

    <TextView
        android:id="@+id/signup_now"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="5dp"
        android:clickable="true"
        android:text="@string/signup_now"
        android:textColor="@color/design_default_color_primary">

    </TextView>

</LinearLayout>