<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/ll_userMessage"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:background="@drawable/mybackground"
                android:gravity="bottom"
                android:orientation="horizontal"
                android:paddingLeft="20dp"
                android:paddingTop="40dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/iv_head"
                    android:layout_width="100dp"
                    android:layout_height="100dp" />

                <TextView
                    android:id="@+id/tv_username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="20dp"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_function"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@+id/ll_userMessage">

                <TextView
                    android:id="@+id/tv_divider1"
                    android:layout_width="match_parent"
                    android:layout_height="3dip"
                    android:layout_below="@+id/ll_date"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="20dp"
                    android:background="@color/colorPrimary" />

                <Button
                    android:id="@+id/btn_mymajor"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:background="@android:color/transparent"
                    android:drawableLeft="@drawable/ic_mymajor"
                    android:drawablePadding="20dp"
                    android:gravity="center_vertical"
                    android:onClick="onClick"
                    android:paddingLeft="20dp"
                    android:text="@string/my_major"
                    android:textColor="#666666"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tv_divider2"
                    android:layout_width="match_parent"
                    android:layout_height="3dip"
                    android:layout_below="@+id/ll_date"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="20dp"
                    android:background="@color/colorPrimary" />

                <Button
                    android:id="@+id/bt_myname"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:background="@android:color/transparent"
                    android:drawableLeft="@drawable/ic_myname"
                    android:drawablePadding="20dp"
                    android:gravity="center_vertical"
                    android:onClick="onClick"
                    android:paddingLeft="20dp"
                    android:text="@string/my_name"
                    android:textColor="#666666"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/bt_mypassword"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:background="@android:color/transparent"
                    android:drawableLeft="@drawable/ic_mypassword"
                    android:drawablePadding="20dp"
                    android:gravity="center_vertical"
                    android:onClick="onClick"
                    android:paddingLeft="20dp"
                    android:text="@string/my_password"
                    android:textColor="#666666"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tv_divider3"
                    android:layout_width="match_parent"
                    android:layout_height="3dip"
                    android:layout_below="@+id/ll_date"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="20dp"
                    android:background="@color/colorPrimary" />

                <Button
                    android:id="@+id/bt_setting"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:background="@android:color/transparent"
                    android:drawableLeft="@drawable/ic_setting"
                    android:drawablePadding="20dp"
                    android:gravity="center_vertical"
                    android:onClick="onClick"
                    android:paddingLeft="20dp"
                    android:text="@string/my_setting"
                    android:textColor="#666666"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/bt_about"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:background="@android:color/transparent"
                    android:drawableLeft="@drawable/ic_about"
                    android:drawablePadding="20dp"
                    android:gravity="center_vertical"
                    android:onClick="onClick"
                    android:paddingLeft="20dp"
                    android:text="@string/my_about"
                    android:textColor="#666666"
                    android:textSize="20sp" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
